--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -3,7 +3,7 @@
 		<%= post.id %>
 	</td>
 	<td>
-		<%= post.status %>
+		<%= status_label(post.status) %>
 	</td>
 	<td>
 		<%= post.date %>
@@ -15,7 +15,7 @@
 		<%= truncate(post.rationale) %>
 	</td>
 	<td>
-		<%= link_to "Edit", edit_post_path(post), id: "edit_#{post.id}" %>
+		<%= link_to "Edit", edit_post_path(post), id: "edit_#{post.id}" if policy(post).update?  %>
 	</td>
 		<td>
 		<%= link_to "Delete", post_path(post), method: :delete, id: "delete_post_#{post.id}_from_index", data: {confirm: "Are you sure?"} %>
