--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -15,7 +15,7 @@
 		<%= post.user.full_name %>
 	</td>
 	<td>
-		<%= truncate(post.rationale) %>
+		<%= link_to truncate(post.rationale), post %>
 	</td>
 	<td>
 		<%= link_to "Edit", edit_post_path(post), id: "edit_#{post.id}" if policy(post).update?  %>
