--- a/app/views/audit_logs/index.html.erb
+++ b/app/views/audit_logs/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Audit Logs</h1>
+<h1>Audit Log Dashboard</h1>
 
 <table class="table table-striped table-hover">
 	<thead>
@@ -28,3 +28,5 @@
 		<%= render @audit_logs%>
 	</tbody>
 </table>
+
+<%= paginate @audit_logs%>
