Responsiveness for post index

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,9 +4,6 @@
 	<thead>
 		<tr>
 			<th>
-				#
-			</th>
-			<th>
 				Overtime Requested
 			</th>
 			<th>
@@ -15,10 +12,7 @@
 			<th>
 				Date
 			</th>
-			<th>
-				User
-			</th>
-			<th>
+			<th class="hidden-xs">
 				Rationale
 			</th>
 		</tr>
