--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,8 +1,5 @@
 <tr>
 	<td>
-		<%= post.id %>
-	</td>
-	<td>
 		<%= post.overtime_request %>
 	</td>
 	<td>
@@ -11,10 +8,7 @@
 	<td>
 		<%= post.date %>
 	</td>
-	<td>
-		<%= post.user.full_name %>
-	</td>
-	<td>
+	<td  class="hidden-xs">
 		<%= link_to truncate(post.rationale), post %>
 	</td>
 	<td>
