changed columns names in Post

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,7 +4,7 @@
 	<thead>
 		<tr>
 			<th>
-				Overtime Requested
+				Daily Hours
 			</th>
 			<th>
 				Status
@@ -13,7 +13,7 @@
 				Date
 			</th>
 			<th class="hidden-xs">
-				Rationale
+				Work Performed
 			</th>
 		</tr>
 	</thead>
