--- a/app/views/static/_pending_approvals.html.erb
+++ b/app/views/static/_pending_approvals.html.erb
@@ -7,7 +7,7 @@
 			<span class="pending_details">Date Submitted:</span> <%= pending_approval.date %>
 		</p>
 		<p>
-			<span class="pending_details">Rationale:</span> <%= truncate(pending_approval.rationale, lenght: 50) %>
+			<span class="pending_details">Work Performed:</span> <%= truncate(pending_approval.work_performed, lenght: 50) %>
 		</p>
 
 		<div class="row">
