--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -12,13 +12,13 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :overtime_request, class: "col-sm-2 control-label" %> 
-    <%= f.text_field :overtime_request, class: "form-control" %>  
+    <%= f.label :daily_hours, class: "col-sm-2 control-label" %> 
+    <%= f.text_field :daily_hours, class: "form-control" %>  
   </div>
 
   <div class="form-group">
-    <%= f.label :rationale, class: "col-sm-2 control-label" %>  
-    <%= f.text_area :rationale, class: "form-control" %>  
+    <%= f.label :work_performed, class: "col-sm-2 control-label" %>  
+    <%= f.text_area :work_performed, class: "form-control" %>  
   </div>
 
   <%= render partial: 'status',  locals: {f: f}  if current_user.type == 'AdminUser' %>
