--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,6 +1,6 @@
 <tr>
 	<td>
-		<%= post.overtime_request %>
+		<%= post.daily_hours %>
 	</td>
 	<td>
 		<%= status_label(post.status) %>
@@ -9,7 +9,7 @@
 		<%= post.date %>
 	</td>
 	<td  class="hidden-xs">
-		<%= link_to truncate(post.rationale), post %>
+		<%= link_to truncate(post.work_performed), post %>
 	</td>
 	<td>
 		<%= link_to "", edit_post_path(post), id: "edit_#{post.id}", class: 'glyphicon glyphicon-pencil index-icons' if policy(post).update?  %>
