--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,10 +1,10 @@
 <div>
-	<h2><%= @post.rationale %> </h2>
+	<h2><%= @post.work_performed %> </h2>
 </div>
 
 <div class="well">
 	<div>
-		<h3><span>Overtime Hours Requested:</span> <%=@post.overtime_request%></h3>
+		<h3><span>Daily Hours:</span> <%=@post.daily_hours%></h3>
 	</div>
 
 	<div>
